# sklep

./: .gitignore  README.md  pyproject.toml
eval/: sklep_gather.py  sklep_run.sh
eval/scripts/: run_classification.py  run_glue.py  run_ner.py  run_qa.py
eval/sweep_config/: hate-speech.yaml  nli.yaml  pos.yaml  rte.yaml  sentiment.yaml  skquad.yaml  sts.yaml  uner.yaml  wikigold.yaml
