[project]
name = "sklep"
version = "0.1.0"
description = "skLEP: A Slovak General Language Understanding Benchmark"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
  "datasets>=3.2.0",
  "typer>=0.15.1",
  "conllu>=6.0.0",
  "torch>=2.6.0",
  "scikit-learn>=1.6.1",
  "seqeval>=1.2.2",
  "transformers[torch]>=4.48.3",
  "wandb>=0.19.6",
  "evaluate>=0.4.3",
  "tiktoken>=0.8.0",
  "sentencepiece>=0.2.0",
  "polars>=1.30.0",
]
